    (a warning issued when such a pdata.frame is created).
  * [.pdata.frame: indexing a pdata.frame is now fully consistent to indexing a data.frame (as documented):
       * fixed: special case of indexing by [i] (missing j) which erroneously returned rows instead of columns.
  * pdata.frame's warnings:
       * if duplicate couples or NA values in the index variables are found while creating a pdata.frame,
         the warning now gives users a hint how to find those (table(index(your_pdataframe), useNA = "ifany").
       * printed is now "id-time" (was: "time-id") to be consistent with order of index variables.

Changes since version 1.5-23

  * make.pconsecutive: new function to make a (p)data.frame or pseries consecutive, meaning having consecutive
                       time periods, t, t+1, t+2, ..., where t is an integer (fills in missing time periods).
                       Optionally, by argument balanced, (p)data.frames) or pseries can be made consecutive 
                       and at the same time also balanced.
  * make.pbalanced: new function to make a (p)data.frame or pseries balanced (but not consecutive)
                    (fills in missing time periods).

Changes since version 1.5-24

  * print.summary.plm: for FD models: now also prints number of observations used during estimation, because
                       these differ from the number of obervations (rows) in the model frame due to diff-ing.
  * pres: fixed handling of pggls' FD models and, thus, summary on pggls' FD models now works without error.
  * pbltest: now has a plm interface (besides the formula interface).
  
Changes since version 1.5-25

  * fixef: * summary.fixef: t distribution is used for p-value calculation (like the heading states).
           * fixef: for the t distribution to be applied for p-value calculation, objects of class "fixef" 
             gained a "df.residual" element.